🐛 fix(resume): disable horizontal scroll on mobile web

--- a/apps/resume/app/styles/globals.css
+++ b/apps/resume/app/styles/globals.css
@@ -6,7 +6,10 @@
   html {
     @apply overflow-x-hidden;
     max-width: 100vw;
-    contain: paint;
+  }
+
+  body {
+    @apply relative w-full overflow-x-hidden;
   }
 
   mark {
